Fix bug with 100% causing horizontal scroll

--- a/movies/static/css/movies.css
+++ b/movies/static/css/movies.css
@@ -7,7 +7,7 @@ body {
     background-color: #f7f7f7;
 }
 .main-panel {
-	width: 100%;
+	right: 0;
 	top: 0;
 	left: 0;
 	height: 40px;
@@ -184,7 +184,8 @@ body {
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    right: 0;
+    left: 0;
     height: 120px;
     padding-top: 10px;
     background-color: #eee;
